[project]
name = "arxiv-researcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cüneyt Gargın", email = "cgargin@gmail.com"},
]
dependencies = ["arxiv>=2.1.3", "llama-index>=0.12.26", "python-dotenv>=1.1.0", "notebook>=7.3.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
